Remove product details from inventory.
Details of the Product bounded context were leaking into the inventory bounded context, refactored
the inventory context to not depend on product details.